# django-virtual-models

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: pre-commit.yml  test.yml  tests.yml
CHANGELOG/: index.html
LICENSE/: index.html
django_virtual_models/: __init__.py  exceptions.py  fields.py  generic_views.py  serializers.py  utils.py
django_virtual_models/prefetch/: __init__.py  exceptions.py  hints.py  serializer_optimization.py
django_virtual_models/query_capture/: capture.py  utils.py
docs/: installation.md  tutorial.md
example/: README.md
example/example/: settings.py  urls.py  wsgi.py
example/movies/: admin.py  models.py  serializers.py  urls.py  views.py  virtual_models.py
example/movies/fixtures/: movies_initial.yaml
example/movies/migrations/: 0001_initial.py  0002_rename_persondirector_movie_order_movies_pers_movie_i_957f84_idx.py
example/tests/: conftest.py  test_views.py
installation/: index.html
search/: search_index.json
tests/: conftest.py
tests/optimization/: test_exceptions.py  test_lookup_finder.py
tests/query_capture/: test_capture.py  test_utils.py
tests/virtual_model_serializers/: test_virtual_model_serializers.py
tests/virtual_models/: db_utils.py  models.py  test_db_utils.py  test_exceptions.py  test_utils.py  test_virtual_models.py
tests/virtual_models/migrations/: 0001_initial.py
tutorial/: index.html
